--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,6 +34,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
+            <!-- describe image using alt attribute -->
             <img src="./assets/images/online-reputation-management.jpg" alt= "Laptop with statistics being displayed on the monitor" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -41,6 +42,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
+            <!-- describe image -->
             <img src="./assets/images/social-media-marketing.jpg" alt= "Application icons" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -51,6 +53,7 @@
     <section class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
+            <!-- describe image -->
             <img src="./assets/images/lead-generation.png" alt= "arrow pointing on dollar sign"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -58,6 +61,7 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
+           <!-- describe image -->
             <img src="./assets/images/brand-awareness.png" alt= "Lightbulb with radar signs around it"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -65,6 +69,7 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
+            <!-- describe image -->
             <img src="./assets/images/cost-management.png" alt= "settings icon and dollar signs"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
